# intent-planner

./: .env.example  .expected_paths_raw.txt  Dockerfile  EXECUTION_PLAN.md  Makefile  README.md  intent-planner-repository-scaffolding.md  pyproject.toml
.github/workflows/: ci.yml
config/: base.yaml
deploy/helm/intent-planner/: Chart.yaml
deploy/k8s/: deployment.yaml
deploy/terraform/: main.tf
docker/: Dockerfile
docs/: runbook.md
docs/adr/: runtime_substrate.md
docs/architecture/: control-plane-repository-scaffolding.md  intent_planner_architecture.md  platform-sdk-repository-scaffolding.md  repository_architecture.md  sequence_diagram.mdd
docs/architecture/audits/: compliance_audits.md
docs/specs/: package_layout_conventions.md  repo_boundary_conventions.md  repository_scaffolding.md
examples/: forex_intent.yaml
planner/: __init__.py
planner/api/: app.py  routes.py
planner/artifacts/: hashing.py  serializer.py
planner/engine/: planner_engine.py
planner/intent/: clarification.py  extractor.py  normalizer.py  schemas.py
planner/tests/: test_intent_normalization.py
planner/utils/: config.py
scripts/: bootstrap.sh
src/intent_planner/: __init__.py
src/intent_planner/application/: __init__.py
src/intent_planner/bootstrap/: __init__.py
src/intent_planner/interpretation/: __init__.py
src/planner/api/: app.py  (+1 more)
tests/: conftest.py  test_api_contract.py  test_capability_resolver.py  test_intent_normalization.py  test_intent_schema_contract.py  test_plan_generation.py  test_planner_engine.py
tests/unit/: test_import_surface.py
(+22 files in other folders)
